# cyberbullying-detection

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
.dvc/: config
configs/: conf.yaml
configs/data/: data_conf.yaml
src/conf/model/: model_conf.yaml
src/configs/data/: data_conf.yaml
src/configs/module/: module_conf.yaml
src/cyberbullying_detection/: __init__.py  data.py  model.py  module.py  preprocessing.py  train.py
